# realm-cpp

./: .gitignore  .gitmodules  Android.bp  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Package.resolved  Package.swift  README.md  conanfile.py  dependencies.list  test.cpp  vcpkg.json
examples/Qt/coffee/: ApplicationFlow.qml  ApplicationFlowForm.ui.qml  Brewing.qml  BrewingForm.ui.qml  CMakeLists.txt  ChoosingCoffee.ui.qml  CoffeeButton.qml  Cup.qml  CupForm.ui.qml  EmptyCup.qml  EmptyCupForm.ui.qml  LICENSE.txt  NavigationButton.ui.qml  README.md  SideBar.qml  SideBarForm.ui.qml  barista.cpp  barista.hpp  coffee.pro  coffee.qdoc  coffee_manager.cpp  coffee_manager.hpp  main.cpp  main.qml  qml.qrc  qt_attribution.json  qtquickcontrols2.conf  realm_models.hpp
examples/Qt/coffee/MongoDB Device Sync/: realm_config.json
examples/Qt/remotecontrolledcar/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.pro  controller.ui  main.cpp
examples/cmake/: CMakeLists.txt  README.md  example.cpp  helloworld.cpp  utils.hpp  vcpkg.json
examples/cmake/cmake/modules/: Findcpprealm.cmake
examples/windows/: CMakeLists.txt  README.md  helloworld.cpp
src/: CMakeLists.txt
src/cpprealm/: CMakeLists.txt  accessors.hpp  alpha_support.hpp  analytics.cpp  analytics.hpp  app.cpp  app.hpp  asymmetric_object.hpp  bson.cpp  bson.hpp  client_reset.cpp  client_reset.hpp  config.h.in  db.cpp  db.hpp  flex_sync.cpp  flex_sync.hpp  link.hpp  logger.cpp  logger.hpp  macros.hpp  managed_binary.cpp  managed_binary.hpp  managed_decimal.cpp  managed_decimal.hpp  managed_dictionary.hpp  managed_list.hpp  managed_mixed.hpp  managed_numeric.cpp  managed_numeric.hpp  managed_objectid.cpp  managed_objectid.hpp  managed_primary_key.cpp  managed_primary_key.hpp  managed_set.hpp  managed_string.cpp  managed_string.hpp  managed_timestamp.cpp  managed_timestamp.hpp  managed_uuid.cpp  (+47 more)
src/cpprealm/experimental/: accessors.hpp  client_reset.cpp  client_reset.hpp  db.cpp  db.hpp  link.hpp  macros.hpp  managed_binary.cpp  managed_binary.hpp  managed_decimal.cpp  managed_decimal.hpp  managed_dictionary.cpp  managed_dictionary.hpp  managed_list.cpp  managed_list.hpp  managed_mixed.cpp  managed_mixed.hpp  managed_numeric.cpp  managed_numeric.hpp  managed_objectid.cpp  managed_objectid.hpp  managed_primary_key.cpp  managed_primary_key.hpp  managed_set.hpp  managed_string.cpp  managed_string.hpp  managed_timestamp.cpp  managed_timestamp.hpp  managed_uuid.cpp  managed_uuid.hpp  observation.cpp  observation.hpp  results.cpp  results.hpp  sdk.hpp  types.cpp  types.hpp
src/cpprealm/internal/: default_network_transport.hpp  generic_network_transport.hpp  type_info.cpp  type_info.hpp  version_numbers.hpp.in
src/cpprealm/internal/android/: network_transport.cpp
src/cpprealm/internal/apple/: default_network_transport.cpp  network_transport.mm
src/cpprealm/internal/bridge/: async_open_task.cpp  async_open_task.hpp  binary.cpp  binary.hpp  bridge_types.hpp.in  col_key.cpp  col_key.hpp  decimal128.cpp  decimal128.hpp  dictionary.cpp  dictionary.hpp  list.cpp  list.hpp  lnklst.cpp  lnklst.hpp  mixed.cpp  mixed.hpp  obj.cpp  obj.hpp  obj_key.cpp  obj_key.hpp  object.cpp  object.hpp  object_id.cpp  object_id.hpp  set.cpp  (+32 more)
src/cpprealm/networking/: http.cpp  networking.cpp  platform_networking.cpp  websocket.cpp
src/cpprealm/persisted/: list.hpp  mixed.hpp  optional.hpp  string.hpp
src/cpprealm/schedulers/: apple_scheduler.cpp  apple_scheduler.hpp  default_scheduler.cpp  default_schedulers.cpp  uv_scheduler.cpp  uv_scheduler.hpp
src/cpprealm/util/: config.h.in
src/libcurl/: module.modulemap
tests/: CMakeLists.txt  admin_utils.cpp  admin_utils.hpp  app_tests.cpp  asymmetric_object_tests.cpp  beta_tests.cpp  binary_tests.cpp  conanfile.py  date_tests.cpp  dependencies.list  embedded_object_tests.cpp  flx_sync_tests.cpp  list_tests.cpp  main.cpp  main.hpp  map_tests.cpp  mixed_tests.cpp  object_id_tests.cpp  object_observe_tests.cpp  object_tests.cpp  opt_tests.cpp  perf_tests.cpp  query_tests.cpp  realm_tests.cpp  results_tests.cpp  run_loop_tests.cpp  setup_baas.rb  str_tests.cpp  sync_test_utils.hpp  sync_test_x_utils.hpp  test_objects.hpp  test_utils.cpp  test_utils.hpp  tests.cpp  thread_tests.cpp  thread_tests.hpp  vcpkg.json
tests/alpha/: app_tests.cpp  asymmetric_object_tests.cpp  binary_tests.cpp  date_tests.cpp  embedded_object_tests.cpp  flx_sync_tests.cpp  list_tests.cpp  map_tests.cpp  mixed_tests.cpp  object_id_tests.cpp  object_tests.cpp  opt_tests.cpp  perf_tests.cpp  query_tests.cpp  realm_tests.cpp  results_tests.cpp  run_loop_tests.cpp  str_tests.cpp  test_objects.hpp
tests/aosp/: Android.bp  README.md  example.cpp  main.cpp
tests/certificate_verification/: certs_test.cpp  certs_test.hpp
tests/db/: binary_tests.cpp  bson_tests.cpp  date_tests.cpp  decimal_tests.cpp  embedded_object_tests.cpp  frozen_tests.cpp  list_tests.cpp  map_tests.cpp  mixed_tests.cpp  numeric_tests.cpp  object_id_tests.cpp  object_tests.cpp  optional_tests.cpp  performance_tests.cpp  query_tests.cpp  realm_tests.cpp  results_tests.cpp  run_loop_tests.cpp  set_tests.cpp  string_tests.cpp  test_objects.hpp  uuid_tests.cpp
tests/experimental/: asymmetric_object_tests.cpp  flexible_sync_tests.cpp
tests/experimental/db/: binary_tests.cpp  date_tests.cpp  decimal_tests.cpp  embedded_object_tests.cpp  frozen_tests.cpp  list_tests.cpp  map_tests.cpp  mixed_tests.cpp  numeric_tests.cpp  object_id_tests.cpp  object_tests.cpp  optional_tests.cpp  performance_tests.cpp  query_tests.cpp  realm_tests.cpp  results_tests.cpp  run_loop_tests.cpp  set_tests.cpp  string_tests.cpp  test_objects.hpp
tests/experimental/sync/: app_tests.cpp  asymmetric_object_tests.cpp  client_reset_tests.cpp  flexible_sync_tests.cpp  test_objects.hpp
tests/sync/: app_tests.cpp  asymmetric_object_tests.cpp  client_reset_tests.cpp  flexible_sync_tests.cpp  networking_tests.cpp  proxy_tests.cpp  test_objects.hpp
tests/utils/networking/: proxy_server.cpp  proxy_server.hpp
tests/vcpkg/: CMakeLists.txt  README.md  helloworld.cpp
(+157 files in other folders)
